Updated Magic Balls File

--- a/Spells/magic-balls.html
+++ b/Spells/magic-balls.html
@@ -70,6 +70,19 @@
     		<li>Magic Balls do not damage <a href="../Armor&#38;Sheilds/Armor/armor.html">Armor</a> unless otherwise noted.</li>
     		<li>Magic Balls are not stopped by <a href="Schools/Protection/protection-from-projectiles.html">Protection From Projectiles</a>, <a href="Schools/Protection/missle-block.html">Missile Block</a>, and other similar Magic and Abilities.</li>
     	</ol>
+
+    	<ul>
+    		<li><a href="Schools/Flame/fireball.html">Fireball</a></li>
+    		<li><a href="Schools/Flame/lightning-bolt.html">Lightning Bolt</a></li>
+    		<li><a href="Schools/Sorcery/force-bolt.html">force-bolt</a></li>
+    		<li><a href="Schools/Sorcery/phase-bolt.html">Phase Bolt</a></li>
+    		<li><a href="Schools/Sorcery/sphere-of-annihilation.html">Sphere of Annihilation</a></li>
+    		<li><a href="Schools/Subdual/abeyance.html">Abeyance</a></li>
+    		<li><a href="Schools/Subdual/entangle.html">Entangle</a></li>
+    		<li><a href="Schools/Subdual/iceball.html">Iceball</a></li>
+    		<li><a href="Schools/Subdual/suppression-bolt.html">Suppression Bolt</a></li>
+    	</ul>
+
     </div>
 
 </body>
