Added missing fonts to the index file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--Fonts-->
+	<link href="https://fonts.googleapis.com/css?family=Germania+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
+
 	<!--Css links-->
 	<link rel="stylesheet" href="css/custom.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
