Fixed Classes Files

--- a/Classes/Knight/paladin.html
+++ b/Classes/Knight/paladin.html
@@ -23,7 +23,7 @@
 	        	<!-- Sidebar -->
 	        	<ul class="navbar-nav mr-auto">
 		            <li class="nav-item">
-		            	<a class="nav-link" href="../Classes/classes.html">Classes</a>
+		            	<a class="nav-link" href="../classes.html">Classes</a>
 		            </li>
 		            <li class="nav-item">
 		            	<a class="nav-link" href="../../Spells/all.html">Spells</a>
