Fixed Magic Balls

--- a/Spells/magic-balls.html
+++ b/Spells/magic-balls.html
@@ -58,7 +58,7 @@
     <div class="container">
     	<h2>Magic Balls</h2>
 
-    	<p>Magic Balls which are thrown and a strike a player or object can have various effects. <br> Unless otherwise noted:</p>
+    	<p>Magic Balls which are thrown and a strike a player or object can have various effects. <a href="../Projectiles&#38;Ammo/Projectiles/magic-ball.html">Rules</a> for making them.<br> Unless otherwise noted:</p>
     	<ol>
     		<li>A magic-user may physically carry only the number of Magic Balls purchased. Pages and other players may not carry extra Magic Balls for magic-users.</li>
     		<li>Once a Magic Ball's Incantation has been said, it is considered active until thrown or interrupted.</li>
