Imported Site Files
Imported Misc. Equipment Folder and added a weapons construction page.

--- a/Misc. Equipment/misc.html
+++ b/Misc. Equipment/misc.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="../css/custom.css">
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 
-	<title>Weapons</title>
+	<title>Misc. Equipment</title>
 
 </head>
 <body>
@@ -38,13 +38,13 @@
 		            	<a class="nav-link" href="../Armor&#38;Shields/armor-shields.html">Armor & Shields</a>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="weapons.html">Weapons</a>
+		            	<a class="nav-link" href="../Weapons/weapons.html">Weapons</a>
 		            </li>
 		            <li class="nav-item">
 		            	<a class="nav-link" href="../Projectiles&#38;Ammo/projectiles-ammo.html">Projectiles & Ammo</a>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="Misc.%20Equipment/misc.html">Misc. Equipment</a>
+		            	<a class="nav-link" href="misc.html">Misc. Equipment</a>
 		            </li>
 	        	</ul>
 	        	<!-- Search Bar -->
@@ -57,19 +57,13 @@
     </header>
 
     <div class="container">
-    	<h2>Weapons</h2>
+    	<h2>Misc. Equipment</h2>
 
-    		<p><a href="weapon-construction.html">Weapon Construction</a></p>
-    		<ul>
-    			<li><a href="bow.html">Bow</a></li>
-    			<li><a href="Melee/dagger.html">Dagger</a></li>
-    			<li><a href="Melee/short.html">Short</a></li>
-    			<li><a href="Melee/long.html">Long</a></li>
-    			<li><a href="Melee/great.html">Great</a></li>
-    			<li><a href="Melee/madu.html">Madu</a></li>
-    			<li><a href="Melee/hinged.html">Hinged</a></li>
-    			<li><a href="Melee/seige-weapons.html">Seige Weapons</a></li>
-    		</ul>
+    	<ul>
+    		<li><a href="sashes.html">Sashes</a></li>
+    		<li><a href="strips.html">Strips</a></li>
+    	</ul>
+
     </div>
 
 </body>
