--- a/Misc. Equipment/strips.html
+++ b/Misc. Equipment/strips.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!--fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Germania+One" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
+	<!--Fonts-->
+	<link href="https://fonts.googleapis.com/css?family=Germania+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
 
 	<!--Css links-->
 	<link rel="stylesheet" href="../css/custom.css">
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 
-	<title>Weapons</title>
-
+	<title>Strips</title>
 </head>
 <body>
 	<header>
@@ -38,13 +37,13 @@
 		            	<a class="nav-link" href="../Armor&#38;Shields/armor-shields.html">Armor & Shields</a>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="weapons.html">Weapons</a>
+		            	<a class="nav-link" href="../Weapons/weapons.html">Weapons</a>
 		            </li>
 		            <li class="nav-item">
 		            	<a class="nav-link" href="../Projectiles&#38;Ammo/projectiles-ammo.html">Projectiles & Ammo</a>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="Misc.%20Equipment/misc.html">Misc. Equipment</a>
+		            	<a class="nav-link" href="/misc.html">Misc. Equipment</a>
 		            </li>
 	        	</ul>
 	        	<!-- Search Bar -->
@@ -57,19 +56,23 @@
     </header>
 
     <div class="container">
-    	<h2>Weapons</h2>
+    	<h2>Strips</h2>
 
-    		<p><a href="weapon-construction.html">Weapon Construction</a></p>
-    		<ul>
-    			<li><a href="bow.html">Bow</a></li>
-    			<li><a href="Melee/dagger.html">Dagger</a></li>
-    			<li><a href="Melee/short.html">Short</a></li>
-    			<li><a href="Melee/long.html">Long</a></li>
-    			<li><a href="Melee/great.html">Great</a></li>
-    			<li><a href="Melee/madu.html">Madu</a></li>
-    			<li><a href="Melee/hinged.html">Hinged</a></li>
-    			<li><a href="Melee/seige-weapons.html">Seige Weapons</a></li>
-    		</ul>
+    	<p>Strips are used to denote certain types of <a href="../Spells/enchantments.html">Enchantments</a> and Special Effects for quick on-field identification. The most common use of strips is to denote Enchantments or Abilities that function as Enchantments.</p>
+    	<ol>
+    		<li>Strips nust have at least 6" of visible drape, and cannot be covered by garb or equipment.</li>
+    		<li>Strips on players must be attached in a visible location when viewing a player from the front.</li>
+    		<li>Strips have a cohesive color-coding system.
+    			<ol type="a">
+    				<li>Offensive Enchantments and Special Effects are denoted by red strips.</li>
+    				<li>Defensive Enchantments and Special Effects are denoted by white strips.</li>
+    				<li>Miscellaneous Enchantments and Special Effects are denoted by yellow strips.</li>
+    			</ol>
+    		</li>
+    		<li>Enchantments and Special Effects that require enchantment strips do not function if the enchantment strips are not present in order for the enchantment or ability to function.</li>
+    		<li>Traits do not require strips unless they require activation, i.e. Traits that are an always-on part of a class do not require strips.</li>
+    	</ol>
+
     </div>
 
 </body>
