--- a/Misc. Equipment/sashes.html
+++ b/Misc. Equipment/sashes.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!--fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Germania+One" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
+	<!--Fonts-->
+	<link href="https://fonts.googleapis.com/css?family=Germania+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
 
 	<!--Css links-->
 	<link rel="stylesheet" href="../css/custom.css">
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
-
-	<title>Weapons</title>
-
+	<title>Sashes</title>
 </head>
 <body>
 	<header>
@@ -38,13 +36,13 @@
 		            	<a class="nav-link" href="../Armor&#38;Shields/armor-shields.html">Armor & Shields</a>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="weapons.html">Weapons</a>
+		            	<a class="nav-link" href="../Weapons/weapons.html">Weapons</a>
 		            </li>
 		            <li class="nav-item">
 		            	<a class="nav-link" href="../Projectiles&#38;Ammo/projectiles-ammo.html">Projectiles & Ammo</a>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="Misc.%20Equipment/misc.html">Misc. Equipment</a>
+		            	<a class="nav-link" href="/misc.html">Misc. Equipment</a>
 		            </li>
 	        	</ul>
 	        	<!-- Search Bar -->
@@ -57,19 +55,10 @@
     </header>
 
     <div class="container">
-    	<h2>Weapons</h2>
+    	<h2>Sashes</h2>
 
-    		<p><a href="weapon-construction.html">Weapon Construction</a></p>
-    		<ul>
-    			<li><a href="bow.html">Bow</a></li>
-    			<li><a href="Melee/dagger.html">Dagger</a></li>
-    			<li><a href="Melee/short.html">Short</a></li>
-    			<li><a href="Melee/long.html">Long</a></li>
-    			<li><a href="Melee/great.html">Great</a></li>
-    			<li><a href="Melee/madu.html">Madu</a></li>
-    			<li><a href="Melee/hinged.html">Hinged</a></li>
-    			<li><a href="Melee/seige-weapons.html">Seige Weapons</a></li>
-    		</ul>
+    	<p>Sashes are used to denote certain classes by their color in games where classes are used. All Sashes must be at least 2" wide and be worn from shoulder to opposite hip across the body.</p>
+
     </div>
 
 </body>
