--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!--Fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Germania+One&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
-
-	<!--Css links-->
-	<link rel="stylesheet" href="css/custom.css">
+	<!--css links-->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/custom.css">
+
+	<!--Font Awesome-->
+	<script src="https://kit.fontawesome.com/53446614ec.js" crossorigin="anonymous"></script>
 
 	<title>About Us</title>
-
 </head>
 <body>
 	<header>
     	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        	<a class="navbar-brand" href="index.html"><span style="font-family: 'Special Elite', cursive;">About Us</span></a>
+        	<a class="navbar-brand" href="index.html">About Us</a>
         	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           	<span class="navbar-toggler-icon"></span>
         	</button>
@@ -23,38 +21,125 @@
 	        	<!-- Sidebar -->
 	        	<ul class="navbar-nav mr-auto">
 		            <li class="nav-item">
-		            	<a class="nav-link" href="Classes/classes.html">Classes</a>
+		            	<div class="dropdown">
+		            		<button class="dropbtn">Classes</button>
+		            		<div class="dropdown-content">
+		            			<a href="Classes/Magic/magic-classes.html">Magic Classes</a>
+		            			<a href="Classes/Melee/melee-classes.html">Melee Classes</a>
+		            			<a href="Classes/Knight/knight-classes.html">Knight Classes</a>
+		            		</div>
+		            	</div>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="Spells/all.html">Spells</a>
+		            	<div class="dropdown">
+		            		<button class="dropbtn">Spells</button>
+		            		<div class="dropdown-content">
+		            			<a href="Spells/magic.html">All Spells</a>
+		            			<a href="Spells/verbals.html">Verbals</a>
+		            			<a href="Spells/enchantments.html">Enchantments</a>
+		            			<a href="Spells/magic-balls.html">Magic Balls</a>
+		            			<a href="Spells/specialty-arrows.html">Specialty Arrows</a>
+		            			<a href="Spells/chant.html">Chant Rules</a>
+		            			<a href="Spells/charge.html">Charge Rules</a>
+		            			<a href="Spells/magic-armor.html">Magic Armor Rules</a>
+		            		</div>
+		            	</div>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="States/states.html">States</a>
+		            	<div class="dropdown">
+                            <button class="dropbtn">States</button>
+                            <div class="dropdown-content">
+                                <a href="States/cursed.html">Cursed</a>
+                                <a href="States/fragile.html">Fragile</a>
+                                <a href="States/frozen.html">Frozen</a>
+                                <a href="States/immune.html">Immune</a>
+                                <a href="States/insubstantial.html">Insubstantial</a>
+                                <a href="States/out-of-game.html">Out of Game</a>
+                                <a href="States/resistent.html">Resistent</a>
+                                <a href="States/stopped.html">Stopped</a>
+                                <a href="States/stunned.html">Stunned</a>
+                                <a href="States/suppressed.html">Suppressed</a>
+                            </div>
+                        </div>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="Effects/effects.html">Effects</a>
+		            	<div class="dropdown">
+		            		<button class="dropbtn">Effects</button>
+		            		<div class="dropdown-content">
+		            			<a href="Effects/armor-breaking.html">Armor Breaking</a>
+		            			<a href="Effects/armor-destroying.html">Armor Destroying</a>
+		            			<a href="Effects/engulfing.html">Emgulfing</a>
+		            			<a href="Effects/shield-crushing.html">Shield Crushing</a>
+		            			<a href="Effects/shield-destroying.html">Shield Destroying</a>
+		            			<a href="Effects/weapon-destroying.html">Weapon Destrpying</a>
+		            			<a href="Effects/wounds-kill.html">Wounds Kill</a>
+		            		</div>		            		
+		            	</div>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="Armor&#38;Shields/armor-shields.html">Armor & Shields</a>
+		            	<div class="dropdown">
+                            <button class="dropbtn">Armor/Shields</button>
+                            <div class="dropdown-content">
+                                <a href="Armor&#38;Shields/Armor/armor.html">Armor</a>
+                                <a href="Armor&#38;Shields/shields.html">Shields</a>
+                            </div>
+                        </div>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="Weapons/weapons.html">Weapons</a>
+		            	<div class="dropdown">
+		            		<button class="dropbtn">Weapons</button>
+		            		<div class="dropdown-content">
+		            			<a href="Weapons/weapon-construction.html">Weapon Construction</a>
+		            			<a href="Weapons/bow.html">Bows</a>
+		            			<a href="Weapons/dagger.html">Daggers</a>
+		            			<a href="Weapons/great.html">Great Swords</a>
+		            			<a href="Weapons/hinged.html">Hinged Weapons</a>
+		            			<a href="Weapons/long.html">Long Swords</a>
+		            			<a href="Weapons/madu.html">Madu</a>
+		            			<a href="Weapons/seige-weapon.html">Seige Weapons</a>
+		            			<a href="Weapons/short.html">Short Swords</a>
+		            		</div>
+		            	</div>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="Projectiles&#38;Ammo/projectiles-ammo.html">Projectiles & Ammo</a>
+		            	<div class="dropdown">
+		            		<button class="dropbtn">Projectiles</button>
+		            		<div class="dropdown-content">
+		            			<a href="Projectiles&#38;Ammo/projectile-description.html">Projectile Description</a>
+		            			<a href="Projectiles&#38;Ammo/Arrows/arrows.html">Arrows</a>
+		            			<a href="Projectiles&#38;Ammo/Projectiles/projectiles.html">Projectiles</a>
+		            		</div>
+		            	</div>
 		            </li>
 		            <li class="nav-item">
-		            	<a class="nav-link" href="Misc.%20Equipment/misc.html">Misc. Equipment</a>
+		            	<div class="dropdown">
+		            		<button class="dropbtn">Misc.</button>
+		            		<div class="dropdown-content">
+		            			<a href="Misc.%20Equipment/sashes.html">Sashes</a>
+		            			<a href="Misc.%20Equipment/strips.html">Strips</a>
+		            		</div>
+		            	</div>
 		            </li>
 	        	</ul>
 	        	<!-- Search Bar -->
-	        	<!--<form class="form-inline mt-2 mt-md-0">
+	        	<form class="form-inline mt-2 mt-md-0">
 	            	<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-	            	<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-	          	</form>-->
+	            	<button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+	          	</form>
 	        </div>
 	    </nav>
     </header>
+
+    <div class="container">
+
+    	<h2>About What We Are</h2>
+    	<p>Amtgard is a world-wide organization dedicated to medieval and fantasy combat sports and recreation. We use padded weapons, fantasy and authentic clothing, and imagination to immerse players in a world of heroic combat, quests, crafts, and more.No matter if your interest is competitive sports fighting, finding an outlet for your creative talents, or honing your leadership skills, Amtgard has something to offer you!</p>
+
+    	<hr>
+
+    	<h4>Centerpoint Youtube Page</h4>
+    	<p><a href=""></a></p>
+    </div>
 
 </body>
 </html>
