--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 	<!--Font Awesome-->
 	<script src="https://kit.fontawesome.com/53446614ec.js" crossorigin="anonymous"></script>
 
+	<!--Responsive Styling-->
+	<meta content="width=device-width, initial-scale=1">
+
 	<title>About Us</title>
+
 </head>
 <body>
 	<header>
