--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		            		<div class="dropdown-content">
 		            			<a href="Misc.%20Equipment/sashes.html">Sashes</a>
 		            			<a href="Misc.%20Equipment/strips.html">Strips</a>
-		            			<a href="../Monster%20Rulebook/index.html">Monster Rulebook</a>
+		            			<a href="Monster%20Rulebook/index.html">Monster Rulebook</a>
 		            		</div>
 		            	</div>
 		            </li>
@@ -135,12 +135,7 @@
     <div class="container">
 
     	<h2>About What We Are</h2>
-    	<!--<p>Amtgard is a world-wide organization dedicated to medieval and fantasy combat sports and recreation. We use padded weapons, fantasy and authentic clothing, and imagination to immerse players in a world of heroic combat, quests, crafts, and more.No matter if your interest is competitive sports fighting, finding an outlet for your creative talents, or honing your leadership skills, Amtgard has something to offer you!</p>
-
-    	<hr>
-
-    	<h4>Centerpoint Youtube Page</h4>
-    	<p><a href=""></a></p>-->
+    	<p>Amtgard is a world-wide organization dedicated to medieval and fantasy combat sports and recreation. We use padded weapons, fantasy and authentic clothing, and imagination to immerse players in a world of heroic combat, quests, crafts, and more.No matter if your interest is competitive sports fighting, finding an outlet for your creative talents, or honing your leadership skills, Amtgard has something to offer you!</p>
     </div>
 
 </body>
