--- a/Armor&Shields/Armor/armor.html
+++ b/Armor&Shields/Armor/armor.html
@@ -137,26 +137,317 @@
     	<h2>Armor</h2>
 
     	<h3>Armor Construction and General Modifiers</h3>
-    	<ul>
-    		<li><a href="armor-construction.html">Armor Construction</a></li>
-    		<li><a href="general-modifiers.html">General Modifiers</a></li>
-    	</ul>
+    	
+    	<button type="button" class="collapsible">Armor Construction</button>
+    	<div class="content">
+    		<ol>
+    		<li>The Monarch, Champion, and Guildmaster of Reeves rate armor.</li>
+    		<li>Armor that is of mixed values across the same area will be averaged based on the percentage of each type of coverage of the area, rounding fractions to the nearest whole number. Example: An arm with a Plate bracer (5 AP) covering 30% of the arm and a Chainmail sleeve (3 AP) covering 70% of the arm will result in an armor value of (.3*5) + (.7*3) = 3.6 = 4 AP across the entire location.</li>
+    		<li>Armor should weigh close to actual historical standards to receive full value.</li>
+    		<li>Straps and other such material that hold your armor on do not count as part of the armor, for either coverage or averaging purposes, unless they are specifically built as such. Example: the leather strap across your back holding on your steel breastplate does not protect you from hits.</li>
+    		<li>A gambeson must be at least equivalent to Cloth armor. A gambeson must be worn under all armor on a hit location in order to give a bonus. A gambeson which extends past the area covered by the armor it is supporting may be either treated as garb or averaged as Cloth armor at the discretion of the wearer on a per-location basis.</li>
+    		<li>All armor must be safe, with no protruding edges that could injure someone.</li>
+    		<li>All corners on any armor that will not deform under contact must come to a point no sharper than the radius of a penny.</li>
+    		<li>Armor that is made from synthetic materials such as vinyl, plastic, etc may be used but may never be rated higher than 2 Armor Points.</li>
+    		<li>Armor is considered to be of the type it most closely resembles. Example: leather with small plates or studs attached at 1” intervals is still leather armor, it is not Butted Plate with a negative modifier.</li>
+    		<li>Armor that is initially rated as zero points does not count as armor. Armor that has been depleted continues to be considered armor, but does not continue to stop wounds until restored.</li>
+    	</ol>
+    	</div>
+
+    	<button type="button" class="collapsible">General Modifiers</button>
+    	<div class="content">
+    		<p>These modifiers may be applied to any type armor as appropriate. See the description of the specific armor types below for specific modifiers.</p>
+	    	<ul>
+	    		<li><b>Inferior Construction: </b>Up to two points can be deducted for armor that is substantially less protective or durable than standard construction techniques. Example: shoddy workmanship, larger ring diameter, lighter gauge, etc.</li>
+	    		<li><b>Non-Standard Metal: </b>One point is deducted for metal armor that is less protective or lighter than steel. Example: titanium, bronze, etc. Metal which is both less protective and lighter has one point deducted for each. Example: Aluminum.</li>
+	    		<li><b>Inferior Appearance: </b>Up to two points can be deducted for inferior appearance, unrelated to the construction techniques used. Example: obviously unfinished armor, visible inauthentic materials, or tarnished/poorly maintained armor. This does not apply if the armor is intentionally made to look shoddy for an in-game purpose, such as monster/ barbarian armor. Armor may receive this penalty regardless of construction quality.</li>
+	    		<li><b>Superior Construction: </b>Up to one point may be awarded for armor that substantially exceeds the defensive properties of the standard materials or uses superior construction techniques zsuch as fluting, heavier thickness/gauge materials, hardening, smaller ring diameter, etc. May not be awarded in combination with the same specific armor type modifier. Example: A +1 cannot be awarded twice for fluting on Articulated Plate.</li>
+	    		<li><b>Superior Appearance: </b>Up to one point may be awarded for exceptional appearance unrelated to the construction techniques used. Examples include extensive and well-done tooling of leather, appealing addition of studs and/or rings, etching of metal, gilding, blueing, etc. Armor receiving a modifier for Inferior Construction is not eligible for this bonus.</li>
+	    		<li><b>Helm: </b>Up to one point may be awarded to the worn torso armor for wearing a helm on the head. The helm must cover at least 50% of the area from the base of the neck upwards. The helm must be of a historical or swords and sorcery fantasy design. The helm bonus is negated if the helm is removed. <br>
+	    		There are two types of helms: Light Helms, and Heavy Helms. Light Helms (e.g. arming cap, coif, etc.) must meet the requirements of at least Strong Leather or Chainmail armor. The torso armor bonus received for a Light Helm may not exceed the maximum value for the armor type. Heavy Helms (e.g. Spangenhelm, Crusader Helm) must meet the requirements of Plate armor and additionally be made of at least 16 gauge metal. The torso armor bonus received from a Heavy Helm may allow the wearer to exceed the maximum value for the armor type.</li>
+	    	</ul>
+    	</div>
+    	
+    	<hr>
 
     	<h3>Armor Types</h3>
-    	<ul>
-    		<li><a href="synthetic.html">Synthetic</a></li>
-    		<li><a href="cloth.html">Cloth</a></li>
-    		<li><a href="light-leather.html">Light Leather</a></li>
-    		<li><a href="strong-leather.html">Strong Leather</a></li>
-    		<li><a href="chainmail.html">Chainmail</a></li>
-    		<li><a href="butted-plates.html">Butted Plates</a></li>
-    		<li><a href="scale.html">Scale</a></li>
-    		<li><a href="lamellar.html">Lamellar</a></li>
-    		<li><a href="brigandine.html">Brigandine</a></li>
-    		<li><a href="plate.html">Plate</a></li>
-    	</ul>
 
+    	<button type="button" class="collapsible">Synthetic</button>
+    	<div class="content">
+    		<p>Material such as vinyl, naugahyde, ABS plastic, etc. <br>
+	    	<b>Base Armor Points: </b>1&nbsp;&nbsp;&nbsp;&nbsp;<b>Maximum Armor Points: </b>2 <br>
+	    	<b>Requirements: </b>Must be a minimum of 1/8" thick. Must not be obviously synthetic in appearance <br>
+	    	<b>Armor Specific Modifiers: </b></p>
+	    	<span class="armor-modifiers">
+	    		<ul>
+		    		<li><b>Heavy Gauge: </b>+1
+		    			<ul>
+		    				<li>Material is at least 1/4" thick either as a single piece or through the permanent attachment of several layers.</li>
+		    			</ul>
+		    		</li>
+		    	</ul>
+	    	</span>
+    	</div>
+
+    	<button type="button" class="collapsible">Cloth</button>
+    	<div class="content">
+    		<p>This fabric armor offers minimal protection from penetration and impact. <br> 
+    		<b>Base Armor Points: </b>1&nbsp;&nbsp;&nbsp;&nbsp;<b>Maximum Armor Points: </b>2 <br>
+    		<b>Requirements: </b>Must be a minimum of 1/16" thick when fully compressed. Must not be easily mistaken as regular garb. <br>
+    		<b>Armor Specific Modifiers: </b>None</p>
+    	</div>
+
+    	<button type="button" class="collapsible">Light Leather</button>
+    	<div class="content">
+    		<p>This animal skin or fur armor offers minimal protection from penetration and impact. <br>
+	    	<b>Base Armor Points: </b>1&nbsp;&nbsp;&nbsp;&nbsp;<b>Maximum Armor Points: </b>2 <br>
+	    	<b>Requirements: </b>Must be a minimum of 1/16" thick. <br>
+	    	<b>Armor Specific Modifiers: </b></p>
+			
+			<span class="armor-modifiers">
+				<ul>
+					<li><b>Cuirboilli: </b>+1 
+						<ul>
+							<li>The leather has been made rigid through boiling, wax impregnation, lacquering, or a similar process.</li>
+						</ul>
+					</li>
+					<li><b>Gambeson: </b>+1
+						<ul>
+							<li>The armor is worn over a Gambeson.</li>
+						</ul>
+					</li>
+				</ul>
+			</span>
+    	</div>
+
+    	<button type="button" class="collapsible">Strong Leather</button>
+    	<div class="content">
+    		<p>This thick leather armor provides some amount of protection from impact and penetration. <br>
+	    	<b>Base Armor Points: </b>2&nbsp;&nbsp;&nbsp;&nbsp;<b>Maximum Armor Points: </b>3 <br>
+	    	<b>Requirements: </b>Must be a minimum of 3/16" thick. <br>
+	    	<b>Armor Specific Modifiers: </b></p>
+			
+			<span class="armor-modifiers">
+				<ul>
+					<li><b>Cuirboilli: </b>+1 
+						<ul>
+							<li>The leather has been made rigid through boiling, wax impregnation, lacquering, or similar process.</li>
+						</ul>
+					</li>
+					<li><b>Gambeson: </b>+1
+						<ul>
+							<li>The armor is worn over a Gambeson.</li>
+						</ul>
+					</li>
+					<li><b>Heavy Gauge: </b>+1
+						<ul>
+							<li>The leather is at least 1/4" thick either as a single piece or through the permanent attachment of several layers.</li>
+						</ul>
+					</li>
+				</ul>
+			</span>
+    	</div>
+
+    	<button type="button" class="collapsible">Chainmail</button>
+    	<div class="content">
+    		<p>This flexible armor is comprised of a tight weave of interlocked metal rings that provides good protection against penetration and some protection from impact. The standard weave for chainmail is 4-in-1 European. Weaves containing less metal qualify as inferior construction. <br>
+	    	<b>Base Armor Points: </b>3&nbsp;&nbsp;&nbsp;&nbsp;<b>Maximum Armor Points: </b>4 <br>
+	    	<b>Requirements: </b>Minimum 4-in-1 standard European weave. Minimum 1.58mm (16 gauge) diameter round steel rings. Flat rings must be at least 1.22mm (18 gauge) thick along their thinnest axis. <br>
+	    	<b>Armor Specific Modifiers: </b></p>
+			
+			<span class="armor-modifiers">
+				<ul>
+					<li><b>Heavy Gauge: </b>+1 
+						<ul>
+							<li>The rings are at least 1.9mm (14 gauge) in diameter. Flat rings must be at least 1.58 (16 gauge) thick along their thinnest axis.</li>
+						</ul>
+					</li>
+					<li><b>Gambeson: </b>+1
+						<ul>
+							<li>This armor is worn over a Gambeson.</li>
+						</ul>
+					</li>
+					<li><b>Dense Weave: </b>+1
+						<ul>
+							<li>The weave is denser than the minimum.</li>
+						</ul>
+					</li>
+					<li><b>Solid Rings: </b>+1
+						<ul>
+							<li>All of the rings are permanently joined so that they may not seperate. Examples are riveting, welding, or solid-cast rings.</li>
+						</ul>
+					</li>
+				</ul>
+			</span>
+    	</div>
+
+    	<button type="button" class="collapsible">Butted Plates</button>
+    	<div class="content">
+    		<p>Armor comprised of numerous steel plates butted together within sewn pockets, attached to a backing, linked by cord or chain, or some other method. This armor is flexible with numerous seams and joints between plates. This armor will deform locally when struck rather than spreading out impact over a large area. It provides fair protection against both penetration and impact. <br>
+	    	<b>Base Armor Points: </b>3&nbsp;&nbsp;&nbsp;&nbsp;<b>Maximum Armor Points: </b>4 <br>
+	    	<b>Requirements: </b>Plates must be at least 1.22mm (18 gauge) steel. plates must spaced no more than 1/8" apart. Plates must cover at least 90% of the exposed area of the armor. <br>
+	    	<b>Armor Specific Modifiers: </b></p>
+			
+			<span class="armor-modifiers">
+				<ul>
+					<li><b>Heavy Gauge: </b>+1 
+						<ul>
+							<li>The plates are at least 1.58mm (16 gauge).</li>
+						</ul>
+					</li>
+					<li><b>Heavy Backing: </b>+1
+						<ul>
+							<li>The plates are attached to a backing of Strong Leather.</li>
+						</ul>
+					</li>
+					<li><b>Gambeson: </b>+1
+						<ul>
+							<li>This armor is worn over a Gambeson.</li>
+						</ul>
+					</li>
+					<li><b>Rigid: </b>+1
+						<ul>
+							<li>The plates are attached to a rigid backing in such a way as to create armor which does not deform locally on impact.</li>
+						</ul>
+					</li>
+					<li><b>No Gaps: </b>+1
+						<ul>
+							<li>The plates are attached to such a fashion as to provide continuous layer without gaps between plates.</li>
+						</ul>
+					</li>
+				</ul>
+			</span>
+    	</div>
+
+    	<button type="button" class="collapsible">Scale</button>
+    	<div class="content">
+    		<p>This armor is created by overlapping many metal plates which are attached along only one edge. Individual scales are not held into rigid contact with the others, thus providing less protection from penetration and impact than other overlapping metal armors. Scale offers fair penetration and impact resistance. <br>
+	    	<b>Base Armor Points: </b>3&nbsp;&nbsp;&nbsp;&nbsp;<b>Maximum Armor Points: </b>4 <br>
+	    	<b>Requirements: </b>Scales must be at least 1.22mm (18 gauge) steel. Scales must overlap bay at least 10%. The backing must not be visible through the scales. <br>
+	    	<b>Armor Specific Modifiers: </b></p>
+			
+			<span class="armor-modifiers">
+				<ul>
+					<li><b>Fluted: </b>+1
+						<ul>
+							<li>Each plate has been fluted for additional strength and ridgidity.</li>
+						</ul>
+					</li>
+					<li><b>Heavy Gauge: </b>+1
+						<ul>
+							<li>Each plate is at least 1.58mm (16 gauge).</li>
+						</ul>
+					</li>
+					<li><b>Gambeson: </b>+1
+						<ul>
+							<li>This armor is worn over a Gambeson.</li>
+						</ul>
+					</li>
+				</ul>
+			</span>
+    	</div>
+
+    	<button type="button" class="collapsible">Lamellar</button>
+    	<div class="content">
+    		<p>This armor is constructed from numerous plates connected to each other in an overlapping fashion by cord, chain link, or similar methods. Unlike Scales, the plates of this type of armor are firmly connected to each other in such a way that they resist penetration. Lamellar armor differs from other rigid metal armors in that it is not shaped to fit the body or articulated; mobility is instead provided by the small amount of flex and slack in the attachment between the individual plates. This armor provides good protection from both impact and penetration. <br>
+	    	<b>Base Armor Points: </b>4&nbsp;&nbsp;&nbsp;&nbsp;<b>Maximum Armor Points: </b>5 (6 if both Superior Overlap and Heavy Gauge modifiers are used.) <br>
+	    	<b>Requirements: </b>Plates must be at least 1.22mm (18 gauge) steel. Plates must overlap by at least 10%. No backing is used for support; plates must be connected directly to each other. <br>
+	    	<b>Armor Specific Modifiers: </b></p>
+			
+			<span class="armor-modifiers">
+				<ul>
+					<li><b>Fluted: </b>+1 
+						<ul>
+							<li>Each plate has been fluted for additional strength and ridgity.</li>
+						</ul>
+					</li>
+					<li><b>Heavy Gauge: </b>+1
+						<ul>
+							<li>Each plate is at least 1.58mm (16 gauge).</li>
+						</ul>
+					</li>
+					<li><b>Supperior Overlap: </b>+1
+						<ul>
+							<li>75% of plates overlap at least 25% of their surface area.</li>
+						</ul>
+					</li>
+					<li><b>Gambeson: </b>+1
+						<ul>
+							<li>This armor is worn over a Gambeson.</li>
+						</ul>
+					</li>
+				</ul>
+			</span>
+    	</div>
+
+    	<button type="button" class="collapsible">Brigandine</button>
+    	<div class="content">
+    		<p>This armor is constructed from numerous shaped amd fited overlapping metal plates solidly connected along one edge to an exterior shell of heavy cloth (such as canvas, denim, or velvet) in such a way that when worn all places are held together firmly without any gaps between them and follow the genral contours of the body. This armor provides good protection against both impact and penetration. <br>
+	    	<b>Base Armor Points: </b>4&nbsp;&nbsp;&nbsp;&nbsp;<b>Maximum Armor Points: </b>5 (6 if both Superior Overlap and Large Plates modifiers are used.) <br>
+	    	<b>Requirements: </b>Plates must be at least 1.22mm (18 gauge) steel. At least 75% of plates must overlap by at least 10% of their surface area. Plates need only be attached along one edge but must be held firmly against each other when the armor is worn. Plates must be shaped and fitted so as to follow the general contours of the wearer. <br>
+	    	<b>Armor Specific Modifiers: </b></p>
+			
+			<span class="armor-modifiers">
+				<ul>
+					<li><b>Heavy Gauge: </b>+1
+						<ul>
+							<li>Each plate is at least 1.58mm (16 gauge).</li>
+						</ul>
+					</li>
+					<li><b>Supperior Overlap: </b>+1
+						<ul>
+							<li>75% of plates overlap at least 25% of their surface area.</li>
+						</ul>
+					</li>
+					<li><b>Gambeson: </b>+1
+						<ul>
+							<li>This armor is worn over a Gambeson.</li>
+						</ul>
+					</li>
+					<li><b>Large Plates: </b>+1
+						<ul>
+							<li>At least 50% of the surface area of the armor is protected by individual large plates rather than numerous smaller plates. Each large plate must be at least 10% of the total size of the hit location.</li>
+						</ul>
+					</li>
+				</ul>
+			</span>
+    	</div>
+
+    	<button type="button" class="collapsible">Plate</button>
+    	<div class="content">
+    		<p>Plate armor is the pinnacle of medieval armor and offers excellent protection against both impact and penetration. Plate armor forms a solid metal shell over the protected areas that spreads impact over a large sueface area to mitigate concussive force. The individual metal pieces of plate armor are shaped and fitted  to articulate together and follow the contours of the body. Plate armor will not deform locally when struck, but will instead behave as a single continuous whole. <br>
+	    	<b>Base Armor Points: </b>5&nbsp;&nbsp;&nbsp;&nbsp;<b>Maximum Armor Points: </b>6 <br>
+	    	<b>Requirements: </b>Metal used must be at least 1.22mm (18 gauge) steel. At least 75% of the protected area must be covered by individual plates which are large relative to the hit location protected; Plate is large individual continuous pieces of metal connected together to form a whole, not a large number of smaller plates. Each plate must be firmly attached to all neighboring plates by strapping or metal-on-metal articulation in such a way as to form a rigid dhell when worn. Armor may still be flexible where necessary for mobility. <br>
+	    	<b>Armor Specific Modifiers: </b></p>
+			
+			<span class="armor-modifiers">
+				<ul>
+					<li><b>Fluted: </b>+1
+						<ul>
+							<li>The armor has been fluted for additional strength and rigidty.</li>
+						</ul>
+					</li>
+					<li><b>Heavy Gauge: </b>+1
+						<ul>
+							<li>Metal used is at least 1.58mm (16 guage).</li>
+						</ul>
+					</li>
+					<li><b>Metal Articulations: </b>+1
+						<ul>
+							<li>Articulations and connections between plates are metal-on-metal rather than metal-on-leather.</li>
+						</ul>
+					</li>
+					<li><b>Gambeson: </b>+1
+						<ul>
+							<li>This armor is worn over a Gambeson.</li>
+						</ul>
+					</li>
+				</ul>
+			</span>
+    	</div>
     </div>
+
+    <script src="../../js/collapsible-dropdown.js"></script>
 
 </body>
 </html>
